--- a/polysleep/Resources/Localizations/Profile.xcstrings
+++ b/polysleep/Resources/Localizations/Profile.xcstrings
@@ -614,7 +614,7 @@
       }
     },
     "notifications.settings.title" : {
-      "extractionState" : "stale",
+      "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1214,13 +1214,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You've started the adaptation process! It's your first day and your body is beginning to adjust to the new schedule."
+            "value" : "Welcome to your polyphasic sleep journey! Today marks the beginning of your adaptation. You might feel tired and groggy as your body starts adjusting to the new schedule. This is completely normal - your circadian rhythm is learning a new pattern."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Adaptasyon sürecine başladın! İlk gündesin ve vücudun yeni düzene alışmaya başlıyor."
+            "value" : "Polifazik uyku yolculuğuna hoş geldin! Bugün adaptasyonunun başlangıcı. Vücudun yeni düzene alışmaya başladığı için yorgun ve sersemlik hissedebilirsin. Bu tamamen normal - sirkadiyen ritmin yeni bir desen öğreniyor."
           }
         }
       }
@@ -1231,13 +1231,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You're in the adjustment phase (day %d). It's crucial to stick to the program during this critical period."
+            "value" : "You're in the challenging adjustment phase (day %d). This is the hardest part! You may experience sleep deprivation, difficulty falling asleep, frequent wake-ups, and mood changes. Stay strong and stick to your schedule - your body is working hard to adapt."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Uyum aşamasındasın (%d. gün). Bu kritik dönemde programa sadık kalmak çok önemli."
+            "value" : "Zorlu uyum aşamasındasın (%d. gün). Bu en zor kısım! Uyku yoksunluğu, uykuya dalmada zorluk, sık uyanmalar ve ruh hali değişiklikleri yaşayabilirsin. Güçlü kal ve programına sadık kal - vücudun adapte olmak için çok çalışıyor."
           }
         }
       }
@@ -1248,13 +1248,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You're in the adaptation phase (day %d). Your sleep quality should start improving."
+            "value" : "You're making progress in the adaptation phase (day %d)! Sleep quality should start improving and you might notice easier transitions into REM sleep during naps. Some tiredness is still normal, but you're getting there. Keep maintaining consistent sleep times."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Adaptasyon aşamasındasın (%d. gün). Uyku kalitenin artmaya başlaması bekleniyor."
+            "value" : "Adaptasyon aşamasında ilerleme kaydediyorsun (%d. gün)! Uyku kaliten artmaya başlamalı ve şekerlemeler sırasında REM uykusuna geçişin kolaylaşabilir. Biraz yorgunluk hala normal, ama hedefe yaklaşıyorsun. Tutarlı uyku saatlerini korumaya devam et."
           }
         }
       }
@@ -1265,13 +1265,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You're in the advanced adaptation phase (day %d). Your body has almost adjusted to the new schedule."
+            "value" : "Excellent progress in the advanced adaptation phase (day %d)! Your sleep efficiency is improving significantly. You should feel more refreshed after sleep sessions and have better alertness during wake periods. Minor adjustments might still occur as your body fine-tunes the new rhythm."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "İleri adaptasyon aşamasındasın (%d. gün). Vücudun yeni düzene neredeyse alıştı."
+            "value" : "İleri adaptasyon aşamasında mükemmel ilerleme (%d. gün)! Uyku verimliliğin önemli ölçüde artıyor. Uyku seansları sonrası kendini daha dinlenmiş hissetmeli ve uyanık olduğun dönemlerde daha iyi uyanıklık yaşamalısın. Vücudun yeni ritmi ince ayarlarken küçük düzenlemeler hala olabilir."
           }
         }
       }
@@ -1282,13 +1282,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "You're in the full adaptation phase (day %d). It's important to remain consistent with the program."
+            "value" : "You're in the full adaptation phase (day %d)! Your body has largely adapted to the polyphasic schedule. Sleep onset should be quick, and you should feel consistently alert and energetic. Maintain your routine to solidify these positive changes and avoid schedule disruptions."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tam adaptasyon aşamasındasın (%d. gün). Programda istikrarlı kalman önemli."
+            "value" : "Tam adaptasyon aşamasındasın (%d. gün)! Vücudun büyük ölçüde polifazik düzene adapte oldu. Uykuya dalman hızlı olmalı ve sürekli uyanık ve enerjik hissetmelisin. Bu olumlu değişiklikleri pekiştirmek için rutinini koru ve program bozulmalarından kaçın."
           }
         }
       }
@@ -1299,13 +1299,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Full adaptation! (day %d) You've fully adapted to the polyphasic sleep schedule."
+            "value" : "Congratulations! Full adaptation achieved (day %d)! You've successfully adapted to the polyphasic sleep schedule. You should experience consistent energy levels, quick sleep onset, and refreshing sleep quality. Your new sleep pattern is now established!"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tam adaptasyon! (%d. gün) Polifazik uyku düzenine tamamen adapte oldun."
+            "value" : "Tebrikler! Tam adaptasyon başarıldı (%d. gün)! Polifazik uyku düzenine başarıyla adapte oldun. Tutarlı enerji seviyeleri, hızlı uykuya dalma ve dinlendirici uyku kalitesi yaşamalısın. Yeni uyku düzenin artık yerleşti!"
           }
         }
       }
@@ -1316,13 +1316,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Full adaptation+! (day %d) You've fully adapted even to the most challenging sleep schedules."
+            "value" : "Outstanding achievement - Full adaptation+ (day %d)! You've mastered even the most challenging polyphasic schedules. Your sleep efficiency is optimized, and you've likely developed excellent sleep flexibility. You're now a polyphasic sleep expert with stable, refreshing sleep patterns."
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tam adaptasyon+! (%d. gün) En zor uyku programlarına bile tamamen adapte oldun."
+            "value" : "Olağanüstü başarı - Tam adaptasyon+ (%d. gün)! En zorlu polifazik programlarda bile ustalaştın. Uyku verimliliğin optimize oldu ve muhtemelen mükemmel uyku esnekliği geliştirdin. Artık istikrarlı, dinlendirici uyku düzenleriyle polifazik uyku uzmanısın."
           }
         }
       }
@@ -3159,6 +3159,125 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Ayarlar"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.beginning" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Beginning"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Başlangıç"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.adjustment" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adjustment"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uyum"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.adaptation" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Adaptasyon"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.advanced" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Advanced"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "İleri"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.full" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Full Adaptation"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tam Adaptasyon"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.complete" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Complete"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tamamlandı"
+          }
+        }
+      }
+    },
+    "profile.adaptation.phase.unknown" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Unknown"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bilinmiyor"
           }
         }
       }
